test/types/range/lydia/badRange-string-lower.good
badRange-string-lower.chpl:1: In function 'main':
badRange-string-lower.chpl:2: error: Range bounds must be integers of compatible types in param for-loops
