test/types/range/lydia/badRange-string-lower.chpl
proc main() {
  for param i in ""..5 {
    writeln(i);
  }
}
